<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<!--    android:background="@drawable/bottom_dialog_background">-->

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tvLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_veiculo"
                android:textAlignment="center"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etApelido"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/hint_apelido" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPlaca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:inputType="text"
                android:maxLength="10"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:hint="@string/hint_placa" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etModelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:hint="@string/hint_modelo" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etQuilometragem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:inputType="number"
                android:imeOptions="actionNext"
                android:maxLines="1"
                android:hint="@string/hint_quilometragem" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTipo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:hint="@string/hint_tipo_veiculo" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSalvaNovoVeiculo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="@android:color/holo_purple"
                android:text="@string/add_btn_texto"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:imeOptions="actionDone"
                android:textStyle="bold" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>