<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<!--    android:background="@drawable/bottom_dialog_background">-->

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/adicionarAnotacaoTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/titulo_adicionar_anotacao"
                android:textAlignment="center"
                android:textSize="16sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTituloAnotacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_marginTop="12dp"
                android:imeOptions="actionNext"
                android:hint="@string/hint_titulo_anotacao"
                android:lines="1"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescricaoAnotacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:hint="@string/hint_descricao_anotacao" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSalvarNovaAnotacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:backgroundTint="@android:color/holo_purple"
                android:text="@string/add_btn_texto"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:imeOptions="actionDone"
                android:textStyle="bold" />
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>