<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="2dp"
        android:layout_marginHorizontal="2dp"
        android:layout_marginVertical="4dp"
        android:theme="@style/Theme.Bibip">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvDetalhesQtdadeLitros"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:text="@string/detalhes_quantidade_de_litros" />


                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvDetalhesValorPago"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:text="@string/detalhes_valor_pago" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvDetalhesQuilometragem"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:text="@string/detalhes_quilometragem" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvDetalhesQuantidadeLitrosValor"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    tools:text="quantidade_litros" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvDetalhesValorPagoValor"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    tools:text="quantidade_litros" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvDetalhesQuilometragemValor"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    tools:text="quantidade_litros" />


            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>



</layout>